--- a/数据文件的分类.md
+++ b/数据文件的分类.md
@@ -7,9 +7,12 @@
 &emsp;&emsp;一个数据在磁盘上怎样存储呢？
 &emsp;&emsp;字符（如'a'）一律以ASCII形式存储。数值型数据（如 5 ）既可以用ASCII形式存储，也可以用二进制形式存储。   
 &emsp;&emsp;例如整数10000，如果用ACII码形式输出到磁盘，则在磁盘中占5个字节（每个字符占一个字节），而用二进制形式输出，则在磁盘上只占4个字节（编译系统为VC++6.0时）。    
-  00000000 | 00000000 | 00100111 | 00010000 
+在内存中存储形式： 00000000 00000000 00100111 00010000   
+ASCII形式：00110001 00110000 00110000 00110000 00110000   
+二进制形式： 00000000 00000000 00100111 00010000
 
-
- ||
+两者的区别：   
+1.用ASCII码输出时字节与字符一一对应，一个字节代表一个字符，因而便于对字符进行处理，也便于输出字符。但一般占存储空间较多，而且要花费转换时间（二进制形式与ASCII形式间的转换）。
+2.用二进制形式输出数值，可以节省外存空间和转换时间，把内存中的存储单元的内容原封不动地输出到磁盘上，此时一个字节并不一定代表一个字符。
    
 
