--- a/数据文件的分类.md
+++ b/数据文件的分类.md
@@ -16,3 +16,5 @@ ASCII形式：00110001 00110000 00110000 00110000 00110000
 2.用二进制形式输出数值，可以节省外存空间和转换时间，把内存中的存储单元的内容原封不动地输出到磁盘上，此时一个字节并不一定代表一个字符。
    
 
+# 参考文献
+《C程序设计》第四版 by谭浩强
