--- a/指针部分较难的知识点.md
+++ b/指针部分较难的知识点.md
@@ -19,5 +19,19 @@ p = &a;
 此处类比。
 
 int * a[4]很好理解，a先与[4]结合表示一个4维数组，int *为数组类型，即一个4维指针数组。
+**<font color=red>&ensp;(4)一维数组与二维数组在使用指向一维数组的指针进行遍历时，对初始化时的区别，很难理解</font>**  
+
+```
+int a[3][4];
+int (*p)[4];
+p=a;
+```
+```
+int a[4];
+int (*p)[4];
+p=&a;
+```
+**对一维数组，虽然&a=a,但是，&a表示取整个数组第0行的地址，与a含义不同，可编程检验&a+1和a+1的值分别为多少**
+
 # 参考文献
 《C程序设计》第四版 by 谭浩强   
